src/MiniJavaProgram.java
/* Generated By:JavaCC: Do not edit this line. MiniJavaProgram.java */
public class MiniJavaProgram implements MiniJavaProgramConstants {

    public static GlobalKlasse globaleList;
    public static JavaClassFileGenerator abc = new JavaClassFileGenerator("ProgramFromGenerator",true,true,true);

    public static void main(String args[]){
        MiniJavaProgram parser = new MiniJavaProgram(System.in);
        try{
            globaleList.setFunction("main");
            parser.start();
        }catch(Exception e){
            System.out.println(e);
        }

        MethodObject[] objs = new MethodObject[globaleList.objectsList.size()];
        objs = globaleList.objectsList.toArray(objs);
        abc.generateClassFile(objs);
    }

  static final public void start() throws ParseException, LWertException, RWertException, ConstantAlreadyException, SymbolAlreadyDefinedException, UnknowSymbolException {
                                                                                                                                 String str="";
    str = programm();
 str+="b1";
    globaleList.getFunction("main").paraNum = 0;
    globaleList.getFunction("main").byteCode = str;
    globaleList.createSymbolTabelle();
    jj_consume_token(0);
//str =str.replaceAll("(?:\\w{2})","$0 ");
System.out.println(str);
  }

  static final public String programm() throws ParseException, RWertException, LWertException, RWertException, ConstantAlreadyException, SymbolAlreadyDefinedException, UnknowSymbolException {
                                                                                                                                                      String str1=""; String str2="";String str3=""; String funcStr="";String procStr="";
    str1 = constDecl("main");
    str2 = varDecl("main",1);
    procStr = procList();
    funcStr = funcList();
    str3 = statement("main");
{if (true) return str1+str2+str3;}
    throw new Error("Missing return statement in function");
  }

  static final public String procList() throws ParseException, LWertException, RWertException, ConstantAlreadyException, SymbolAlreadyDefinedException, UnknowSymbolException {
                                                                                                                                        String procStr=""; String listStr="";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
      procStr = procedure();
      listStr = procList();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    {if (true) return procStr + listStr;}
    throw new Error("Missing return statement in function");
  }

  static final public String funcList() throws ParseException, LWertException, RWertException, ConstantAlreadyException, SymbolAlreadyDefinedException, UnknowSymbolException {
                                                                                                                                        String funcStr=""; String listStr="";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FUNC:
      funcStr = function();
      listStr = funcList();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    {if (true) return funcStr + listStr;}
    throw new Error("Missing return statement in function");
  }

//const declaration
  static final public String constDecl(String functionName) throws ParseException, ConstantAlreadyException {
                                                                       String ret="";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FINAL:
      jj_consume_token(FINAL);
      jj_consume_token(INT);
      ret = constZuw(functionName);
      constList(functionName);
      jj_consume_token(21);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
 {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  static final public String constZuw(String functionName) throws ParseException, ConstantAlreadyException {
                                                                      Token t1=null; Token t2=null;
    t1 = jj_consume_token(IDENT);
    jj_consume_token(22);
    t2 = jj_consume_token(NUMBER);
    globaleList.getFunction(functionName).addConstant(t1.image, t2.image);
    if(functionName.equals("main")) {if (true) return "";}
    {if (true) return "";}
    throw new Error("Missing return statement in function");
  }

  static final public void constList(String functionName) throws ParseException, ConstantAlreadyException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 23:
      jj_consume_token(23);
      constZuw(functionName);
      constList(functionName);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
  }

//variable declaration
  static final public String varDecl(String functionName, int i) throws ParseException, SymbolAlreadyDefinedException {
                                                                                 Token varName=null; String str1=""; String str2="";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
      varName = jj_consume_token(IDENT);
      str1 = varZuw(functionName, varName,i);
      str2 = varList(functionName, i+1);
      jj_consume_token(21);
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
{if (true) return str1+str2;}
    throw new Error("Missing return statement in function");
  }

  static final public String varZuw(String functionName, Token varName,int index) throws ParseException, SymbolAlreadyDefinedException {
                                                                                                  Token value=null; String str="";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 22:
      jj_consume_token(22);
      value = jj_consume_token(NUMBER);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
int i;
if(value==null) i=0 ;
else i = Integer.parseInt(value.image);
//add variable
globaleList.getFunction(functionName).addVariable(varName.image, String.valueOf(index));
if(i <= 15) {str= "100" + Integer.toHexString(i);}
else if(i <=255) str = "10" + Integer.toHexString(i);
else if(i <= 4095) str = "110" + Integer.toHexString(i);
else str="11" + Integer.toHexString(i);
str += "36";
if(index <= 15) str+= "0"+index;
else str += index;
{if (true) return str;}
    throw new Error("Missing return statement in function");
  }

  static final public String varList(String functionName, int i) throws ParseException, SymbolAlreadyDefinedException {
                                                                                 Token varName=null; String str1=""; String str2="";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 23:
      jj_consume_token(23);
      varName = jj_consume_token(IDENT);
      str1 = varZuw(functionName, varName,i);
      str2 = varList(functionName, i+1);
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
{if (true) return str1+str2;}
    throw new Error("Missing return statement in function");
  }

  static final public String expression(String functionName) throws ParseException, UnknowSymbolException, RWertException {
                                                                                     String strTerm=""; String strSumme="";
    strTerm = term(functionName);
    strSumme = summe(functionName);
     {if (true) return strTerm+strSumme;}
    throw new Error("Missing return statement in function");
  }

  static final public String summe(String functionName) throws ParseException, UnknowSymbolException, RWertException {
                                                                               String strTerm=""; String strSumme="";Token plusToken=null; Token minusToken=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
    case MINUS:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        plusToken = jj_consume_token(PLUS);
        break;
      case MINUS:
        minusToken = jj_consume_token(MINUS);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      strTerm = term(functionName);
      strSumme = summe(functionName);
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    if(plusToken != null){
        strTerm= strTerm+"60"+strSumme;
    }
    if(minusToken!=null){
        strTerm= strTerm+"64"+strSumme;
    }
 {if (true) return strTerm;}
    throw new Error("Missing return statement in function");
  }

  static final public String term(String functionName) throws ParseException, UnknowSymbolException, RWertException {
                                                                              String strFaktor=""; String strProduct="";
    strFaktor = faktor(functionName);
    strProduct = product(functionName);
    {if (true) return strFaktor+strProduct;}
    throw new Error("Missing return statement in function");
  }

  static final public String product(String functionName) throws ParseException, UnknowSymbolException, RWertException {
                                                                                 Token malToken=null; Token geteiltToken=null; String strFaktor=""; String strProduct="";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MAL:
    case GETEILT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAL:
        malToken = jj_consume_token(MAL);
        break;
      case GETEILT:
        geteiltToken = jj_consume_token(GETEILT);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      strFaktor = faktor(functionName);
      strProduct = product(functionName);
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    if(malToken!= null) strFaktor=strFaktor+"68"+strProduct;
    if(geteiltToken !=null) strFaktor= strFaktor+"6c"+strProduct;
 {if (true) return strFaktor;}
    throw new Error("Missing return statement in function");
  }

  static final public String faktor(String functionName) throws ParseException, UnknowSymbolException, RWertException {
                                                                                Token num=null; Token ident=null; String exp =""; String str="";int i=0;String tmp=""; Token check=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMBER:
      num = jj_consume_token(NUMBER);
    i = Integer.parseInt(num.image);
    // print bytecode
     if(i <= 15) str= "100" + Integer.toHexString(i);
     else if(i <=255) str = "10" + Integer.toHexString(i);
     else if(i <= 4095) str = "110" + Integer.toHexString(i);
     else str="11" + Integer.toHexString(i);
     {if (true) return str;}
      break;
    case IDENT:
      ident = jj_consume_token(IDENT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
        check = jj_consume_token(24);
        tmp = functionCall(functionName);
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
if(check == null){ // Es handelt sich um einen Variablenamen oder Konstantnamen
    if(globaleList.getFunction(functionName).tabelle.containsKey(ident.image) && !functionName.equals("main")){ // Das Symbol ist in der Symboltabelle der Funktion
        //Go, let find in this function
        if(globaleList.getFunction(functionName).variableNames.contains(ident.image)){//Variable
            //print byte code
            i = Integer.parseInt(globaleList.getSymbol(functionName,ident.image));
            if( i<=15) str="150"+ Integer.toHexString(i);
            else str = "15"+Integer.toHexString(i);
        }
        else{//Konstant
            //print byte code
            i=Integer.parseInt(globaleList.getSymbol(functionName,ident.image));
            if( i<=15) str="100"+ Integer.toHexString(i);
            else str = "10"+Integer.toHexString(i);
        }
    }
    else if(globaleList.getFunction("main").tabelle.containsKey(ident.image)){ // find in main
        if(globaleList.getFunction("main").variableNames.contains(ident.image)){//variable
            //print byte code
            i = Integer.parseInt(globaleList.getSymbol(functionName,ident.image));
            if( i<=15) str="150"+ Integer.toHexString(i);
            else str = "15"+Integer.toHexString(i);
        }
        else{//konstant
            //print byte code
            i=Integer.parseInt(globaleList.getSymbol("main",ident.image));
            if( i<=15) str="100"+ Integer.toHexString(i);
            else str = "10"+Integer.toHexString(i);
        }
    }
    else{
        {if (true) throw new RWertException("Constant or Variable doesn't exist");}
    }
    {if (true) return str;}
}
else{
    System.out.println("function name is: " + functionName);
    if(globaleList.functionList.containsKey(ident.image)){

        exp = "b8(".concat( ident.image+")");
        {if (true) return tmp + exp;}
    }
    else{
        {if (true) throw new RWertException("This function name doesn't exist");}
    }
}
      break;
    case 24:
      jj_consume_token(24);
      exp = expression(functionName);
      jj_consume_token(25);
 {if (true) return exp;}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public String condition(String functionName) throws ParseException, LWertException, RWertException, UnknowSymbolException {
                                                                                                  String exp1=""; String exp2=""; Token vergleichToken=null; String ret="";
    exp1 = expression(functionName);
    vergleichToken = jj_consume_token(COMPOP);
    exp2 = expression(functionName);
    //Hier ist die Java Code. Hier wird eine Bytecode String erstellt und der String wird genau an den Opcode für If beendet. Die String Länge wird danach gemessen
    //indem wir die String Länge durch 2 geteilt. Hier entscheiden wir nur, welche Bytecode mit der Opcode passt.
        ret += exp1;
        ret += exp2;
        String op = vergleichToken.image;
        switch(op){
            case "==": ret += "a0";  break;
            case "<=": ret += "a3"; break;
            case "<": ret += "a2"; break;
            case ">": ret += "a4"; break;
            case ">=": ret += "a1"; break;
            case "!=": ret += "9f"; break;
            default: {if (true) return "";}
        }
        {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  static final public String statement(String functionName) throws ParseException, LWertException, RWertException, UnknowSymbolException {
                                                                                                  String temp=""; String stm = ""; String condStr = ""; String ret="";Token token=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENT:
      token = jj_consume_token(IDENT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
        jj_consume_token(24);
        ret = procCall(functionName);
        break;
      case 22:
        jj_consume_token(22);
        temp = expression(functionName);
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(21);
    if(!temp.equals("")){ // Zuweisung
        ret = temp;
        temp = token.image; // change temp to variable name
        if(globaleList.getFunction(functionName).tabelle.containsKey(temp) || globaleList.getFunction("main").tabelle.containsKey(temp)){
            ret += "36";
            int i = Integer.parseInt(globaleList.getSymbol(functionName, temp));

            if(i <= 15) ret+= "0"+Integer.toHexString(i);
            else ret += Integer.toHexString(i);
            {if (true) return ret;}
        }
        else{
            {if (true) throw new LWertException("variable doesn't exist");}
        }
    }
    else{
        {if (true) return ret+"b8(" + token.image +")";}
    }
      break;
    case PRINT:
      jj_consume_token(PRINT);
      jj_consume_token(24);
      temp = expression(functionName);
      jj_consume_token(25);
      jj_consume_token(21);
                                                      {if (true) return temp+"b8(print)";}
      break;
    case 26:
      jj_consume_token(26);
      ret = stmtList(functionName);
      jj_consume_token(27);
 {if (true) return ret;}
      break;
    case IF:
      jj_consume_token(IF);
      condStr = condition(functionName);
      stm = statement(functionName);
    int i = (6+stm.length()+6) /2;
    if(i <= 15) condStr+= "000" + Integer.toHexString(i);
    else if(i <=255) condStr += "00" + Integer.toHexString(i);
    else if(i <= 4095) condStr += "0" + Integer.toHexString(i);
    else condStr+= Integer.toHexString(i);
    ret = condStr+stm+"a7";
      stm = optElse(functionName);
    i=(6+ stm.length()) / 2;
    if(i <= 15) ret+= "000" + Integer.toHexString(i);
    else if(i <=255) ret += "00" + Integer.toHexString(i);
    else if(i <= 4095) ret += "0" + Integer.toHexString(i);
    else ret+= Integer.toHexString(i);
    ret+= stm;
    {if (true) return ret;}
      break;
    case WHILE:
      jj_consume_token(WHILE);
      condStr = condition(functionName);
      stm = statement(functionName);
    i = stm.length() / 2 + 3 + 3;
    if(i <= 15) condStr+= "000" + Integer.toHexString(i);
    else if(i <=255) condStr += "00" + Integer.toHexString(i);
    else if(i <= 4095) condStr += "0" + Integer.toHexString(i);
    else condStr+= Integer.toHexString(i);

    int backward = 65535 - i;
    ret = condStr+stm+"a7";
    if(backward <= 15) ret+= "000" + Integer.toHexString(backward);
    else if(backward <=255) ret += "00" + Integer.toHexString(backward);
    else if(backward <= 4095) ret += "0" + Integer.toHexString(backward);
    else ret+= Integer.toHexString(backward);

    {if (true) return ret;}
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public String optElse(String functionName) throws ParseException, LWertException, UnknowSymbolException, RWertException {
                                                                                                String ret="";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      ret = statement(functionName);
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  static final public String stmtList(String functionName) throws ParseException, LWertException, UnknowSymbolException, RWertException {
                                                                                                 String stm="";String list = "";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHILE:
    case IF:
    case PRINT:
    case IDENT:
    case 26:
      stm = statement(functionName);
      list = stmtList(functionName);
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    {if (true) return stm + list;}
    throw new Error("Missing return statement in function");
  }

  static final public String functionCall(String functionName) throws ParseException, UnknowSymbolException, RWertException {
                                                                                      String exp1=""; String exp2="";int paraCount=0;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMBER:
    case IDENT:
    case 24:
      exp1 = expression(functionName);
      exp2 = expList(functionName);
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    jj_consume_token(25);
    {if (true) return exp1+exp2;}
    throw new Error("Missing return statement in function");
  }

  static final public String expList(String functionName) throws ParseException, UnknowSymbolException, RWertException {
                                                                                 String exp1=""; String exp2="";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 23:
      jj_consume_token(23);
      exp1 = expression(functionName);
      exp2 = expList(functionName);
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
    {if (true) return exp1+exp2;}
    throw new Error("Missing return statement in function");
  }

//procall
  static final public String procCall(String functionName) throws ParseException, UnknowSymbolException, RWertException {
                                                                                  String exp1=""; String exp2="";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMBER:
    case IDENT:
    case 24:
    case 25:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUMBER:
      case IDENT:
      case 24:
        exp1 = expression(functionName);
        exp2 = expList(functionName);
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      jj_consume_token(25);
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
    {if (true) return exp1+exp2;}
    throw new Error("Missing return statement in function");
  }

// parameters
  static final public int routinenParameter(String functionName) throws ParseException, SymbolAlreadyDefinedException {
                                                                                 int i=0; Token vName=null; int ret =i;
    jj_consume_token(INT);
    vName = jj_consume_token(IDENT);
                     globaleList.getFunction(functionName).addVariable(vName.image,String.valueOf(i));i+=1; ret=i;
    ret = parameterList(functionName, i);
System.out.println("How many parameter: " + ret);
{if (true) return ret;}
    throw new Error("Missing return statement in function");
  }
